--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-.env
 __pycache__/
 *.pyc
-models/vit_tempe_model.pth
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+.env
+.idea/
+.vscode/
+*.h5  # Jangan ignore model file jika mau deploy
+*.hdf5
+.DS_Store
